feat: Add DateSelected resource key and update export date range handler to display selection confirmation

--- a/DT_HR.Application/Resources/SharedResource.en.resx
+++ b/DT_HR.Application/Resources/SharedResource.en.resx
@@ -485,4 +485,7 @@ Safe travels! 🚗💨
   <data name="NoRecord" xml:space="preserve">
     <value>No Record</value>
   </data>
+  <data name="DateSelected" xml:space="preserve">
+    <value>✅Date selected successfully</value>
+  </data>
 </root>
