--- a/DT_HR.Application/Resources/SharedResource.uz.resx
+++ b/DT_HR.Application/Resources/SharedResource.uz.resx
@@ -314,7 +314,7 @@
     <value>Tadbiringiz haqida ma'lumot kiriting</value>
   </data>
   <data name="EnterEventTime" xml:space="preserve">
-    <value>Tadbir vaqtini kiriting (dd-MM-yyyy HH:mm)</value>
+    <value>Tadbir vaqtini kiriting (Soat:Daqiqa)</value>
   </data>
   <data name="EventCreated" xml:space="preserve">
     <value>Tadbir saqlandi</value>
@@ -437,6 +437,18 @@ Xavfsiz sayohat! 🚗💨
   </data>
   <data name="StartDateMustBeBeforeEndDate" xml:space="preserve">
     <value>❌ Boshlash sanasi tugash sanasidan oldin bo'lishi kerak</value>
+  </data>
+  <data name="SelectStartDate" xml:space="preserve">
+    <value>📅 Boshlash sanasini tanlang</value>
+  </data>
+  <data name="SelectEndDate" xml:space="preserve">
+    <value>📅 Tugash sanasini tanlang</value>
+  </data>
+  <data name="StartDateSelected" xml:space="preserve">
+    <value>✅ Boshlash sanasi tanlandi</value>
+  </data>
+  <data name="EndDateSelected" xml:space="preserve">
+    <value>✅ Tugash sanasi tanlandi</value>
   </data>
   <data name="GeneratingReport" xml:space="preserve">
     <value>⏳ Davomat hisoboti tayyorlanmoqda...</value>
