--- a/DT_HR.Application/Resources/SharedResource.ru.resx
+++ b/DT_HR.Application/Resources/SharedResource.ru.resx
@@ -206,16 +206,21 @@
   <data name="SessionExpired" xml:space="preserve">
     <value>❌ Сессия истекла. Пожалуйста, начните заново.</value>
   </data>
+  <data name="OtherEtaPrompt" xml:space="preserve">
+    <value>⏰ Когда вы планируете прибыть в офис, или будете отсутствовать весь день?</value>
+  </data>
+  <data name="AbsentAllDay" xml:space="preserve">
+    <value>❌ Отсутствую весь день</value>
+  </data>
   <data name="OversleptPrompt" xml:space="preserve">
     <value>😴 **Проспал**
         Когда вы планируете прибыть?  
     </value>
   </data>
   <data name="OtherReasonPrompt" xml:space="preserve">
-    <value>Пожалуйста, укажите:
-        Причину отсутствия. 
-        Ожидаемое время прибытия, если придете (формат: ЧЧ:ММ) или напишите "отсутствую", если не придете
-        Пример: "Визит к врачу, 14:00" или "Семейные обстоятельства, отсутствую"</value>
+    <value>
+Пожалуйста, укажите Причину отсутствия. 
+</value>
   </data>
   <data name="InvalidTimeFormat" xml:space="preserve">
     <value>❌ Пожалуйста, укажите время в правильном формате (ЧЧ:ММ).</value>
