feat: Update localization keys and improve message formatting in attendance handlers

--- a/DT_HR.Application/Resources/SharedResource.en.resx
+++ b/DT_HR.Application/Resources/SharedResource.en.resx
@@ -301,7 +301,7 @@
     <value>Marked at</value>
   </data>
   <data name="Expected" xml:space="preserve">
-    <value>Expected</value>
+    <value>ETA</value>
   </data>
   <data name="Absence recorded" xml:space="preserve">
     <value>Absence recorded</value>
