feat: Enhance work time settings handling and update keyboard actions for cancellation

--- a/DT_HR.Application/Resources/SharedResource.en.resx
+++ b/DT_HR.Application/Resources/SharedResource.en.resx
@@ -535,8 +535,7 @@ Safe travels! 🚗💨
   <data name="CurrentWorkHours" xml:space="preserve">
     <value>📅 Current Work Hours:
 Start: {0}
-End: {1}
-</value>
+End: {1}</value>
   </data>
   <data name="WorkHoursUpdated" xml:space="preserve">
     <value>✅ Work hours updated successfully!</value>
