--- a/DT_HR.Application/Resources/SharedResource.en.resx
+++ b/DT_HR.Application/Resources/SharedResource.en.resx
@@ -313,7 +313,7 @@
     <value>📊 Attendance Stats</value>
   </data>
   <data name="AttendanceDetails" xml:space="preserve">
-    <value>📋 Detailed Attendance</value>
+    <value>📊 Detailed statistics, via Date</value>
   </data>
   <data name="Settings" xml:space="preserve">
     <value>⚙️Settings</value>
@@ -481,6 +481,12 @@ Safe travels! 🚗💨
   <data name="AttendanceReport" xml:space="preserve">
     <value>Attendance Report</value>
   </data>
+  <data name="Performance" xml:space="preserve">
+    <value>Performance</value>
+  </data>
+  <data name="PerformanceBar" xml:space="preserve">
+    <value>Performance Bar</value>
+  </data>
   <data name="EmployeeName" xml:space="preserve">
     <value>Employee Name</value>
   </data>
@@ -567,4 +573,8 @@ Example: 18:00</value>
   <data name="CustomTimeText" xml:space="preserve">
     <value>Custom time</value>
   </data>
+  <data name="SelectDate" xml:space="preserve">
+    <value>SelectDate</value>
+  </data>
+  
 </root>
