--- a/DT_HR.Application/Resources/SharedResource.uz.resx
+++ b/DT_HR.Application/Resources/SharedResource.uz.resx
@@ -317,7 +317,7 @@ Iltimos, Kechikish sababini kiriting
     <value>📊 Statistika </value>
   </data>
   <data name="AttendanceDetails" xml:space="preserve">
-    <value>📋 Batafsil</value>
+    <value>📊 Batafsil Statistika, Sana bilan</value>
   </data>
   <data name="Settings" xml:space="preserve">
     <value>⚙️Sozlamalar</value>
@@ -480,6 +480,12 @@ Xavfsiz sayohat! 🚗💨
   <data name="AttendanceReport" xml:space="preserve">
     <value>Davomat hisoboti</value>
   </data>
+  <data name="Performance" xml:space="preserve">
+    <value>Unumdorlik</value>
+  </data>
+  <data name="PerformanceBar" xml:space="preserve">
+    <value>Unumdorlik shkala</value>
+  </data>
   <data name="EmployeeName" xml:space="preserve">
     <value>Xodim ismi</value>
   </data>
@@ -565,5 +571,8 @@ Masalan: 18:00</value>
   </data>
   <data name="CustomTimeText" xml:space="preserve">
     <value>Boshqa vaqt</value>
+  </data>
+  <data name="SelectDate" xml:space="preserve">
+    <value>Sanani tanlang</value>
   </data>
 </root>
